bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: value update is not a member of String
  if (litMessage()="R"){
      ^BDR:6: error: value update is not a member of String
  } else if (litMessage()="L"){
             ^BDR:9: error: value update is not a member of String
  } else if (litMessage()="I"){
             ^BDR:12: error: value update is not a member of String
  } else if (litMessage()="A"){
             ^BDR:14: error: value update is not a member of String
  } else if (litMessage()="B"){
             ^BDR:17: error: value update is not a member of String
  } else if (litMessage()="C"){
             ^BDR:21: error: value update is not a member of String
  } else if (litMessage()="Z"){
             ^BDR:23: error: value update is not a member of String
  } else if (litMessage()="Y") {
             ^BDR:26: error: value update is not a member of String
  } else if (litMessage()="X"){
             ^